AboutScreen & ProjectScreen Set up

--- a/jmndao/public/static/css/index.css
+++ b/jmndao/public/static/css/index.css
@@ -1,5 +1,74 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap'); */
+
+@font-face {
+    font-family: 'Fira Code';
+    src: url(../fonts/FiraCode-Medium.ttf);
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: 'Fira Code';
+    src: url(../fonts/FiraCode-Bold.ttf);
+    font-weight: bold;
+}
+
+@font-face {
+    font-family: 'Fira Code';
+    src: url(../fonts/FiraCode-Regular.ttf);
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: 'Fira Code';
+    src: url(../fonts/FiraCode-Light.ttf);
+    font-weight: 300;
+}
+
+@font-face {
+    font-family: 'Fira Code';
+    src: url(../fonts/FiraCode-SemiBold.ttf);
+    font-weight: 600;
+}
+
 :root {
+    --light: #eee;
+    --timeline-link: #1890ff;
+    --header-link-hover: #232B2B;
+    --header-link-hover-icon: #eee;
+    --timeline-date: #ced4da;
+    --divider: #495057;
+    --bg: #232B2B;
+    --bg-rgb: 14, 18, 18;
+    /* --bgLight: radial-gradient(var(--bg),transparent,var(--purple) 130%); */
+    --gray: grey;
+    --comment: #555;
     --nav-height: 50px;
+    --github-hover: #343a40;
+    --github: #212529;
+    --github-hover-light: #eee;
+    --github-light: #fff;
+    --linkedin-hover: #0a66c2;
+    --linkedin: #0073b1;
+    --yt-hover: #f00;
+    --yt: #ba181b;
+}
+
+h1,
+h2 {
+    font-family: 'Fira Code', monospace;
+    font-weight: bold !important;
+}
+
+h3,
+h4,
+h5 {
+    font-family: 'Fira Code', monospace;
+    font-weight: 600 !important;
+}
+
+html,
+body {
+    font-family: 'Fira Code', monospace !important;
 }
 
 * {
@@ -46,6 +115,7 @@ ul.ant-menu-overflow.ant-menu.ant-menu-root.ant-menu-horizontal.ant-menu-light.m
     /* position: absolute;
     top: calc(var(--nav-height) - 1px); */
     padding-bottom: 4.5rem;
+    padding-top: 4.5rem;
     background-color: #eee;
     width: 100%;
     height: 100%;
@@ -67,6 +137,10 @@ ul.ant-menu-overflow.ant-menu.ant-menu-root.ant-menu-horizontal.ant-menu-light.m
     font-weight: 600;
     padding: 20px 2rem;
     width: 100%;
+}
+
+.ant-divider-horizontal {
+    background-color: var(--bg);
 }
 
 .app-header.light {
@@ -117,7 +191,7 @@ ul.ant-menu-overflow.ant-menu.ant-menu-root.ant-menu-horizontal.ant-menu-light.m
 
 .banner-info p:first-child {
     font-size: 3rem;
-    font-weight: 800;
+    font-weight: 400;
     margin-bottom: 10px;
 }
 
@@ -258,6 +332,49 @@ ul.ant-menu-overflow.ant-menu.ant-menu-root.ant-menu-horizontal.ant-menu-light.m
     height: 40px;
     width: 40px;
     margin: 5px 10px;
+}
+
+.app-footer .center-footer {
+    color: var(--bg);
+}
+
+
+/* Social Icons Color */
+
+a [aria-label='github'] {
+    color: var(--github);
+}
+
+.about-screen a [aria-label='github'] {
+    color: var(--github-light);
+}
+
+.about-screen a [aria-label='github']:hover {
+    color: var(--github-hover-light);
+    transition: color 200ms ease;
+}
+
+a [aria-label='github']:hover {
+    color: var(--github-hover);
+    transition: color 200ms ease;
+}
+
+a [aria-label='linkedin'] {
+    color: var(--linkedin);
+}
+
+a [aria-label='linkedin']:hover {
+    color: var(--linkedin-hover);
+    transition: color 200ms ease;
+}
+
+a [aria-label='youtube'] {
+    color: var(--yt-hover);
+}
+
+a [aria-label='youtube']:hover {
+    color: var(--yt);
+    transition: color 200ms ease;
 }
 
 
