--- a/frontend/public/static/css/contact.css
+++ b/frontend/public/static/css/contact.css
@@ -59,6 +59,21 @@
     width: 100%;
 }
 
+.contact-error {
+    padding: 10px;
+    margin: 5px auto;
+    text-align: left;
+    font-size: 14px;
+    background-color: #d00000;
+    color: #eee;
+    border-radius: 5px;
+    opacity: 0.6;
+}
+
+.contact-error.hide {
+    display: none;
+}
+
 @media screen and (max-width: 578px) {
     html,
     body {
