AboutForm FireStorage deleted DynamicField

--- a/frontend/public/static/css/about.css
+++ b/frontend/public/static/css/about.css
@@ -124,6 +124,13 @@
     width: 100%;
 }
 
+
+/* Admin */
+
+.admin-about-form .ant-upload-list-item.ant-upload-list-item-uploading.ant-upload-list-item-list-type-text {
+    display: none;
+}
+
 @media screen and (max-width: 578px) {
     html,
     body {
