--- a/frontend/public/static/css/admin.css
+++ b/frontend/public/static/css/admin.css
@@ -4,27 +4,32 @@
     --light: #eee;
     --bg: #232b2b;
     --nav-height: 50px;
+    --sidebar-width: 256px;
 }
 
-.admin-screen {
+
+/* Admin SideBar Menu */
+
+ul.ant-menu.ant-menu-root.ant-menu-inline.ant-menu-light {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    background-color: #eee;
+}
+
+.admin-page-display-section {
     position: relative;
-    width: 100%;
-    min-height: 100vh;
-    /* Default background-color light */
-    background-color: var(--light);
+    top: 0;
+    left: calc(var(--sidebar-width) + 5px);
+    margin: 1rem;
 }
 
-.admin-screen.light {
-    background-color: var(--light);
-    color: var(--bg) !important;
-}
 
-.admin-screen.dark {
-    background-color: var(--bg);
-    color: var(--light) !important;
-}
+/* Admin/About */
 
-.admin-screen-wrapper {
-    margin-top: calc(var(--nav-height) - 1px);
-    padding: 2rem 1.5rem;
+.admin-about-form-wrapper {
+    padding: 20px;
+    width: calc(90% - var(--sidebar-width));
+    height: auto;
 }
