--- a/frontend/public/static/css/admin.css
+++ b/frontend/public/static/css/admin.css
@@ -30,7 +30,8 @@ ul.ant-menu.ant-menu-root.ant-menu-inline.ant-menu-light {
 /* Admin/About */
 
 .admin-about-form-wrapper,
-.admin-project-wrapper {
+.admin-project-wrapper,
+.admin-project-new-wrapper {
     padding: 20px;
     width: calc(90% - var(--sidebar-width));
     height: auto;
