JCode bug fixed from css

--- a/frontend/public/static/css/jcode.css
+++ b/frontend/public/static/css/jcode.css
@@ -11,11 +11,19 @@
     --nav-height: 50px;
 }
 
-.jcode-top-img {
-    height: auto;
+.jcode-top-img,
+.jcode-top-item-img {
     width: 100%;
     background-color: var(--light);
     margin-top: calc(var(--nav-height) - 1px);
+}
+
+.jcode-top-img {
+    height: 500px;
+}
+
+.jcode-top-item-img {
+    height: auto;
 }
 
 .jcode-text-content-h {
