--- a/frontend/public/static/css/jcode.css
+++ b/frontend/public/static/css/jcode.css
@@ -50,7 +50,8 @@
 }
 
 .ace_editor {
-    border-radius: 10px;
+    border-radius: 5px;
+    padding: 10px 5px;
 }
 
 .jcode-item-wrapper {
@@ -61,6 +62,8 @@
     width: 80%;
     height: auto;
     margin: 0 auto;
+    font-size: 16px;
+    line-height: 1.8rem;
 }
 
 .divider-divider {
